// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSeverity component tests badge - basic 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "rgba(255, 255, 255, 0.0001)",
          "borderRadius": 10.5,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 7,
          "height": 35,
          "justifyContent": "center",
          "maxHeight": 35,
          "minHeight": 35,
          "paddingHorizontal": 14,
          "paddingVertical": 0,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "fontWeight": 600,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
        testID="Button_Text"
      >
        Button
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "flex-start",
          },
          {
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 100,
              "height": 21,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
            {
              "backgroundColor": "#fbacaa",
            },
          ]
        }
        testID="Badge"
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              },
              {
                "minWidth": undefined,
              },
            ]
          }
        >
          Badge
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "flexDirection": "row",
            "height": 0,
            "position": "absolute",
            "width": 750,
          }
        }
      >
        <View
          collapsable={false}
        >
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              {
                "color": "#000000",
                "fontFamily": "TT Fellows",
                "fontSize": 10.5,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              }
            }
          >
            Badge
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ButtonSeverity component tests badge - dot 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#44e858",
          "borderColor": "rgba(255, 255, 255, 0.0001)",
          "borderRadius": 10.5,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 7,
          "height": 35,
          "justifyContent": "center",
          "maxHeight": 35,
          "minHeight": 35,
          "paddingHorizontal": 14,
          "paddingVertical": 0,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 14,
            "fontWeight": 600,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
        testID="Button_Text"
      >
        Button
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          {
            "position": "absolute",
            "right": -0.5,
            "top": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 100,
              "height": 7,
              "width": 7,
            },
            {
              "backgroundColor": "#aad7fb",
            },
          ]
        }
        testID="Badge"
      />
    </View>
  </View>
</View>
`;
